# AscendingServer

./: .env  .gitignore  AscendingServer.code-workspace  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ServerLog.txt  ca-key.pem  server-crt.ext  server-csr.pem  settings.toml  settings.toml.default
data/items/: 0.json  1.json  10.json  11.json  12.json  1661.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
data/items/json/: 1078.json
data/maps/: -1_-1_0.json  -1_-2_0.json  -1_0_0.json  -1_1_0.json  -1_2_0.json  -2_-1_0.json  -2_-2_0.json  -2_0_0.json  -2_1_0.json  -2_2_0.json  0_-1_0.json  0_-2_0.json  0_0_0.json  0_0_1.json  0_1_0.json  0_2_0.json  1_-1_0.json  1_-2_0.json  1_0_0.json  1_0_1.json  1_1_0.json  1_2_0.json  2_-1_0.json  2_-2_0.json  2_0_0.json  2_0_1.json  2_1_0.json  2_2_0.json
data/npcs/: 0.json  237.json  472.json  733.json
data/npcs/json/: 372.json
data/shops/: 0.json  78.json
keys/: ca-crt.pem  client.cer  client.key  scaleway_server-key.pem  scaleway_server.crt  server-key.pem  server.crt
keys/debug/: ca-crt.srl  ca-key.pem  server-crt.ext  server-csr.pem
keys/host/: ca-crt.srl  ca-key.pem  server-crt.ext  server-csr.pem  server-key.pem  server.crt
src/: containers.rs  gameloop.rs  gametypes.rs  identity.rs  ipc.rs  items.rs  logins.rs  main.rs  maps.rs  network.rs  npcs.rs  players.rs  socket.rs  sql.rs  tasks.rs
src/containers/: bases.rs  entity.rs  storage.rs  world.rs
src/containers/entity/: mapitem_data.rs  npc_data.rs  player_data.rs  shared_data.rs
src/database/: map.rs
src/gameloop/: datatask_builders.rs  datatasks.rs  handledata.rs  mainloop.rs  mapswitchtasks.rs  mod.rs  sends.rs
src/gameloop/handledata/: handle_account.rs  handle_action.rs  handle_general.rs  handle_item.rs  handle_trade.rs  mapper.rs  router.rs  routes.rs
src/gametypes/: entity.rs  enums.rs  error.rs  game_time.rs  map_position.rs  mod.rs  pathnode.rs  position.rs  rgb.rs  sharedstructs.rs  target.rs
src/identity/: actor.rs  keys.rs  packets.rs
src/ipc/: info_actor.rs  ipc_actor.rs  listener.rs  packet_ids.rs  routes.rs
src/items/: item.rs  itemdata.rs  shopdata.rs
src/logins/: actor.rs  packets.rs
src/maps/: actor.rs  logic.rs  map.rs  mapitem.rs  mod.rs  packets.rs
src/network/: listen_actor.rs  packet_ids.rs  packet_translator.rs  sends.rs  socket.rs  socket_actor.rs
src/network/packet_extractor/: packets.rs
src/network/packet_translator/: packets.rs  router.rs
src/npcs/: combat.rs  logic.rs  movement.rs  npc.rs  npcdata.rs  pathfinding.rs  stages.rs  targeting.rs
src/npcs/stages/: combat.rs  movement.rs  targeting.rs
src/players/: achievements.rs  combat.rs  inv.rs  logic.rs  mod.rs  movement.rs  player.rs  player_storage.rs  stages.rs
src/players/logic/: map.rs  movement.rs
src/players/stages/: movement.rs
src/socket/: buffer.rs  client.rs  mod.rs  packet_ids.rs  sends.rs  server.rs
src/sql/: achievestruct.rs  equipmentstruct.rs  integers.rs  invstruct.rs  logstruct.rs  mod.rs  playerstruct.rs  queries.rs  schema.rs  schema_enums.rs  schema_structs.rs  sql_enums.rs  storagestruct.rs  updater.rs
src/sql/queries/: account.rs  combat.rs  equipment.rs  general.rs  inventory.rs  location.rs  storage.rs
src/tasks/: datatask_builders.rs  datatasks.rs  mapswitchtasks.rs
src/time_ext/: date.rs  duration.rs  instant.rs  mod.rs
