[package]
name = "ascending_server"
version = "0.1.0"
authors = ["Andrew Wheeler <genusistimelord@outlook.com>", "Sherwin Salonga", "S.J.R. van Schaik"]
edition = "2021"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "2.0.3" }
serde = { version = "1.0.215", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
bit_op = { version = "0.1.1" }
rand = { version = "0.8.5" }
bytey = { version = "0.4.0" }
mmap_bytey = { version = "0.2.0" }
indexmap = { version = "2.6.0" }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "time",
    "json",
] }
tokio = { version = "1.41.1", features = ["full", "tracing"] }
log = { version = "0.4.22", default-features = false }
backtrace = { version = "0.3.74" }
itertools = { version = "0.13.0" }
toml = { version = "0.8.19" }
serde_json = { version = "1.0.132" }
educe = { version = "0.6.0", default-features = false, features = [
    "Debug",
    "PartialEq",
    "Default",
    "Clone"
] }
speedy = { version = "0.8.7" }
rangemap = { version = "1.5.1", features = ["serde1"] }
ahash = { version = "0.8.11" }
futures = { version = "0.3.31" }
tracing = { version = "0.1.40" }
console-subscriber = { version = "0.4.1" }
slotmap = { version = "1.0.7", features = ["serde"] }
interprocess = { version =  "2.2.1", features = ["tokio"] }

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
strip = "none"
lto = false
incremental = true
panic = 'unwind'
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = true
lto = true
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.dev.package."*"]
opt-level = 2