[package]
authors = [
  "Andrew Wheeler <genusistimelord@outlook.com>",
  "Sherwin Salonga",
  "S.J.R. van Schaik",
]
edition = "2024"
license = "MIT OR Apache-2.0"
name = "ascending_server"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
argon2 = "0.5.3"
backtrace = "0.3.73"
bit_op = "0.1.1"
bytey = "0.4.0"
chrono = {version = "0.4.38", features = ["serde"]}
educe = {version = "0.6.0", default-features = false, features = [
  "Debug",
  "PartialEq",
  "Default",
]}
indexmap = "2.9.0"
itertools = "0.14.0"
log = {version = "0.4.21", default-features = false}
mio = {version = "1.0.3", features = ["os-poll", "net"]}
mmap_bytey = "0.2.0"
password-hash = {version = "0.5.0", features = ["rand_core"]}
pki-types = {package = "rustls-pki-types", version = "1.11.0", features = [
  "std",
]}
rand = "0.9.0"
rangemap = {version = "1.5.1", features = ["serde1"]}
rcgen = {version = "0.13.2", features = [
  "pem",
  "ring",
], default-features = false}
regex = "1.11.1"
rustls = {version = "0.23.25", default-features = false, features = [
  "logging",
  "ring",
  "std",
  "tls12",
]}
rustls-pemfile = "2.2.0"
serde = {version = "1.0.207", features = ["derive"]}
serde_json = "1.0.138"
slab = "0.4.11"
slotmap = "1.0.7"
speedy = "0.8.7"
sqlx = {version = "0.8.3", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "time",
  "json",
  "uuid",
]}
thiserror = "2.0.12"
tokio = {version = "1.44.0", features = ["full", "tracing"]}
toml = "0.8.20"
uuid = {version = "1.16.0", features = [
  "v7", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
webpki-roots = "0.26.8"

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
strip = "none"

[profile.release]
codegen-units = 256
debug = false
debug-assertions = false
incremental = true
lto = true
opt-level = 3
overflow-checks = true
panic = 'unwind'
rpath = false
strip = "none"

